--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <body>
         <h1>Welcome To My Project!</h1>
         <p>In this project, I'm going to demostrate how to use git features like branch, commit, pull and push...</p>
+        <h1>Welcome To Paragraph Two!</h1>
+        <p>In this project, I'm going to demostrate how to use git features like branch, commit, pull and push...</p>
     </body>
 </html>
